# sigil

./: .gitignore  Cargo.toml  README.md
sigil-core/: Cargo.toml
sigil-core/src/: html_renderer.rs  lib.rs
sigil-dioxus/: Cargo.toml
sigil-dioxus/src/: lib.rs
sigil-editor/: Cargo.toml
sigil-editor/assets/: editor.css
sigil-editor/examples/: demo.rs
sigil-editor/src/: lib.rs
sigil-render/: Cargo.toml
sigil-render/examples/: render_avatar.rs
sigil-render/src/: lib.rs
