[workspace]
members = [
    "sigil-core",
    "sigil-editor",
    "sigil-render",
    "sigil-dioxus",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["meetzli"]
repository = "https://github.com/bytematebot/sigil"

[workspace.dependencies]
sigil-core = { path = "./sigil-core" }
sigil-render = { path = "./sigil-render" }
sigil-dioxus = { path = "./sigil-dioxus" }

serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"

tiny-skia = "0.11.4"
cosmic-text = "0.15.0"

dioxus = { version = "0.7.1", features = ["web"]}
dioxus-web = "0.7.1"
wasm-bindgen = "0.2.106"
